--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react": "^2.4.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
